# cryptopals-rust

./: Cargo.toml  rustfmt.toml
src/: bytes.rs  dictionary.rs  hex.rs  lib.rs  xor.rs
src/challenges/: set1.rs
src/snapshots/: cryptopals__hex__tests__aaa.snap  cryptopals__hex__tests__parse_hex.snap  cryptopals__hex__tests__success_b64_decode.snap  cryptopals__hex__tests__success_b64_decode_padding.snap  cryptopals__hex__tests__success_b64_encode_no_padding.snap  cryptopals__hex__tests__success_b64_encode_with_padding.snap  cryptopals__tests__SSdtIGtpbGxpbmcgeW91ciBicmFpbiBsaWtlIGEgcG9pc29ub3VzIG11c2hyb29t.snap  cryptopals__tests__aaa.snap  cryptopals__tests__parse_hex.snap  cryptopals__xor__tests__xor.snap
