[package]
name = "cryptopals"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
bytemuck = "1.14.0"
bytes = "1.5.0"
thiserror = "1.0.50"
insta = "1.34.0"
itertools = "0.12.0"
rayon = "1.8.0"
once_cell = "1.18.0"
